fixed date button on mobile screeen

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -454,7 +454,7 @@ a {
 
 @media (max-width:600px) {
   .show-button-filter {
-    display: inline-block;
+    display: inline;
     margin: 0 auto;
     padding-bottom: 0;
     width: 40%;
@@ -1355,7 +1355,7 @@ a {
    }
 
    .date-pill {
-     display: inline-block;
+     display: block;
      margin: 1%;
    }
  }
